[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lora"
version = "0.1.0"
description = "Run assembler (Canu, Flye, Hifiasm) on a set of long read files"
authors = ["Sequana Team"]
license = "BSD-3"
repository = "https://github.com/sequana/lora"
readme = "README.rst"
keywords = ["pacbio", "nanopore", "snakemake", "sequana", "assembly"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [
    { include = "sequana_pipelines" }
]

[tool.poetry.dependencies]
python = "^3.8"
sequana-pipetools = "^0.7.6"
pandas = "^1.4.1"
Jinja2 = "^3.0.3"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
black = "^22.1.0"
ipython = "^8.0.1"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.1"

[tool.poetry.scripts]
sequana_lora = "sequana_pipelines.lora.main:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
