[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sequana-lora"
version = "0.2.0"
description = "Run assembler (Canu, Flye, Hifiasm) on a set of long read files"
authors = ["Sequana Team"]
license = "BSD-3"
repository = "https://github.com/sequana/lora"
readme = "README.rst"
keywords = ["pacbio", "nanopore", "snakemake", "sequana", "assembly"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [
    { include = "sequana_pipelines" }
]

[tool.poetry.dependencies]
python = "^3.8"
sequana-pipetools = "^0.14.1"
pandas = "^2.0.0"
Jinja2 = "^3.1.2"

[tool.poetry.scripts]
sequana_lora = "sequana_pipelines.lora.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"
pytest = "^7.0.1"
black = "^23.3.0"
ipython = "^8.0.1"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.1"
snakefmt = "^0.8.4"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "strict"
